# explains

./: .gitignore  .pre-commit-config.yaml  README.md  playlists.json  setup.cfg
.github/workflows/: update.yml
ep001/: README.md
ep001/rev02/: hello.py
ep001/rev03/: hello.py
ep001/rev06/: hello.py
ep001/rev07/: hello.py
ep001/rev08/: hello.py
ep001/rev11/: hello.py
ep002/: README.md
ep002/rev01/: t.py
ep002/rev02/: t.py
ep002/rev03/: t.py
ep003/: README.md
ep003/rev01/: t.py
ep003/rev02/: t.py
ep004/: README.md
ep005/rev02/: t.py
ep005/rev03/: t.py
ep006/: README.md
ep007/: README.md
ep007/rev01/: t.py
ep008/rev02/: t.py
ep008/rev03/: t.py
ep008/rev06/: t.py
ep008/rev07/: t.py
ep009/: README.md
ep010/rev01/: t.py
ep010/rev02/: t.py
ep011/rev02/: t.py
ep011/rev04/: t.py
ep011/rev05/: t.py
ep011/rev09/: t.py
ep012/rev02/: t.py
ep012/rev06/: t.py
ep012/rev08/: t.py
ep016/: README.md
ep017/: README.md
ep019/: README.md
ep020/: README.md
ep021/: README.md
ep022/: README.md
ep023/: README.md
ep024/: README.md
ep025/: README.md  setup.cfg
ep026/: README.md
ep028/: README.md
ep029/: README.md
ep031/: README.md
ep032/: README.md
ep033/: README.md
ep035/: README.md  t.py
ep036/: README.md
ep039/: README.md
ep040/: README.md
ep041/: README.md
ep042/: README.md
ep043/: README.md  tox.ini
ep044/: README.md
ep046/: README.md
sample_code/ep057/rev02/: setup.cfg
sample_code/ep057/rev02/hello_world/: main.py
tests/: playlist_json_test.py  update_playlist_test.py
(+1828 files in other folders)
