[metadata]
name = hello-world
version = 1.0.0
description = this package contains some sample hello world code
url = https://github.com/asottile/hello-world
author = Anthony Sottile
author_email = email@example.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:

[options.entry_points]
console_scripts =
    hello-world-cli = hello_world.main:main

[options.packages.find]
exclude =
    tests*
    testing*
